--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -15,9 +15,9 @@
       institution: Université Grenoble Alpes, Grenoble, France
       year: 2021
       description:
-        - Diploma: Sciences del a terre et de l’univers et de l’environnement 
-        - Advisor: Vincent Favier
-        - Summer School: Atmospheric Rivers Colloquium Summer School, Scripps Research, La Jolla
+        - Diploma:/ Sciences del a terre et de l’univers et de l’environnement 
+        - Advisor:/ Vincent Favier
+        - Summer School:/ Atmospheric Rivers Colloquium Summer School, Scripps Research, La Jolla
     - title: Federal teaching diploma
       institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
       year: 1900
@@ -107,4 +107,4 @@
 - title: Other Interests
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - Hobbies:/ Hobby 1, Hobby 2, etc.
