--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -16,8 +16,8 @@
       year: 2021
       description:
         - Degree: Sciences del a terre et de l’univers et de l’environnement
-        - Thesis title: "Antarctic Atmospheric River Climatology and Impacts"  
-        - Advisor: "Vincent Favier"
+        - Thesis title: Antarctic Atmospheric River Climatology and Impacts  
+        - Advisor: Vincent Favier
         - Summer School: "Atmospheric Rivers Colloquium Summer School, Scripps Research, La Jolla"
     - title: M.Sc
       institution: The Ohio State University, Columbus, Ohio, U.S.A.
@@ -36,18 +36,13 @@ Tower! site on the Ross Ice Shelf"
           #contents:
             #- Sub-description 1.
            # - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
+
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
+    - title: Postdoctoral Researcher
+      institution: Institute für Atmosphäre und Klima, ETH Zürich, Zürich, Switzerland
       year: 1933 - 1955
       description:
         - Description 1.
