--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -15,17 +15,16 @@
       institution: Université Grenoble Alpes, Grenoble, France
       year: 2021
       description:
-        - Degree: "Sciences del a terre et de l’univers et de l’environnement"
-        - Thesis title: "Antarctic Atmospheric River Climatology and Impacts"  
-        - Advisor: "Vincent Favier"
-        - Summer School: "Atmospheric Rivers Colloquium Summer School, Scripps Research, La Jolla"
+        - Degree:Sciences del a terre et de l’univers et de l’environnement
+        - Thesis title:Sciences del a terre et de l’univers et de l’environnement  
+        - Advisor:Vincent Favier
+        - Summer School:Atmospheric Rivers Colloquium Summer School, Scripps Research, La Jolla
     - title: M.Sc
       institution: The Ohio State University, Columbus, Ohio, U.S.A.
       year: 2015
-        - Degree: "Atmospheric Science"
-        - Thesis title: "Antarctic Atmospheric River Climatology and Impacts"  
-        - Advisor: "Vincent Favier"
-        - Summer School: "Atmospheric Rivers Colloquium Summer School, Scripps Research, La Jolla"
+      description:
+        - Description 1.
+        - Description 2.
     - title: B.Sc
       institution: The University of Oklahoma, Norman, Oklahoma, U.S.A.
       year: 2013
@@ -109,4 +108,4 @@
 - title: Other Interests
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+   # - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
