--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -15,7 +15,7 @@
       institution: Université Grenoble Alpes, Grenoble, France
       year: 2021
       description:
-        - Degree:Sciences del a terre et de l’univers et de l’environnement
+        - Degree: "Sciences del a terre et de l’univers et de l’environnement"
         - Thesis title:Sciences del a terre et de l’univers et de l’environnement  
         - Advisor:Vincent Favier
         - Summer School:Atmospheric Rivers Colloquium Summer School, Scripps Research, La Jolla
