--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -108,4 +108,4 @@
 - title: Other Interests
   type: list
   contents:
-   # - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
