--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -16,9 +16,9 @@
       year: 2021
       description:
         - <u>Degree:</u> Sciences del a terre et de l’univers et de l’environnement
-        - Thesis title:Sciences del a terre et de l’univers et de l’environnement  
-        - Advisor:Vincent Favier
-        - Summer School:Atmospheric Rivers Colloquium Summer School, Scripps Research, La Jolla
+        - <u>Thesis title:</u> Antarctic Atmospheric River Climatology and Impacts    
+        - <u>Advisor:</u> Vincent Favier
+        - <u>Summer School:</u> Atmospheric Rivers Colloquium Summer School, Scripps Research, La Jolla
     - title: M.Sc
       institution: The Ohio State University, Columbus, Ohio, U.S.A.
       year: 2015
