--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -24,7 +24,8 @@
       year: 2015
       description:
         - <u>Degree:</u> Atmospheric Science
-        - <u>Thesis title:</u> Antarctic Atmospheric River Climatology and Impacts    
+        - <u>Thesis title:</u> Analysis of the AMPS-Polar WRF Boundary Layer at the Alexander Tall           
+Tower site on the Ross Ice Shelf    
         - <u>Advisor:</u> David H. Bromwich
     - title: B.Sc
       institution: The University of Oklahoma, Norman, Oklahoma, U.S.A.
