--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -30,23 +30,18 @@
       institution: The University of Oklahoma, Norman, Oklahoma, U.S.A.
       year: 2013
       description:
-        - Major: Meteorology
-        - Minor: Environmental Sustainability
-        - Study Aboard: The University of Reading, Reading, United Kingdom, 2012
+        - <u>Major:</u> Meteorology
+        - <u>Minor:</u> Environmental Sustainability
+        - <u>Study Aboard:</u> The University of Reading, Reading, United Kingdom, 2012
           #contents:
             #- Sub-description 1.
            # - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
+
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
+    - title: Postdoctoral Researcher
       institution: Institute for Advanced Study, Princeton University
       year: 1933 - 1955
       description:
