--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -54,18 +54,22 @@
       institution: Institut des Géosciences de l’Environnement, Grenoble, France 	
       year: 2021 - 2022
       description:
-        - <u>Project:</u> ARCA |
-        - <u>Advisor:</u> Erich Fischer
+        - <u>Project:</u> ARCA | Atmospheric Rivers Climatology in Antarctica
+        - <u>Advisor:</u> Vincent Favier
           #contents:
            # - Sub-description 1.
             #- Sub-description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
+    - title: Doctoral Researcher
+      institution: Institut des Géosciences de l’Environnement, Grenoble, France 	
+      year: 2017 - 2021
+      description:
+       # - <u>Project:</u> ARCA | Atmospheric Rivers Climatology in Antarctica
+       # - <u>Advisor:</u> Vincent Favier
+          #contents:
+           # - Sub-description 1.
+            #- Sub-description 2.    - title: Director
+    - title: Research Assistant
+      institution: Polar Meteorology Group, Byrd Polar and Climate Research Center, The Ohio State University
       year: 1911 - 1917
       description:
 
