--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -70,7 +70,7 @@
             #- Sub-description 2.    - title: Director
     - title: Research Assistant
       institution: Polar Meteorology Group, Byrd Polar and Climate Research Center, The Ohio State University
-      year: 1911 - 1917
+      year: 2016, 2017
       description:
 
     - title: Associate Professor of Theoretical Physics
