--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -19,6 +19,9 @@
         - <u>Thesis title:</u> Antarctic Atmospheric River Climatology and Impacts    
         - <u>Advisor:</u> Vincent Favier
         - <u>Summer School:</u> Atmospheric Rivers Colloquium Summer School, Scripps Research, La Jolla
+        - <u>Field Campaign:</u> Dumont d'Urville, Antarctica
+          contents:
+            - Snow measurements and weather station repairs 
     - title: M.Sc
       institution: The Ohio State University, Columbus, Ohio, U.S.A.
       year: 2015
@@ -73,6 +76,22 @@
       year: 2016, 2017
       description:
 
+    - title: Meteorologist/Communications Supporter
+      institution: Antarctic Logistics and Expeditions, Union Glacier, Antarctica
+      year: 2016 - 2017
+      
+    - title: Weather Observer
+      institution: United States Antarctic Program, West Antarctic Ice Sheet (WAIS) Divide Field Camp
+      year: 2015 - 2016
+      
+    - title: Gradate Research Assistant 
+      institution: Polar Meteorology Group, Byrd Polar and Climate Research Center, The Ohio State University
+      year: 2013 - 2015
+      
+    - title: Associate Professor of Theoretical Physics
+      institution: University of Zurich, Zurich, Switzerland
+      year: 1909 - 1911
+      
     - title: Associate Professor of Theoretical Physics
       institution: University of Zurich, Zurich, Switzerland
       year: 1909 - 1911
