--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -72,7 +72,7 @@
            # - Sub-description 1.
             #- Sub-description 2.    - title: Director
     - title: Research Assistant
-      institution: Polar Meteorology Group, Byrd Polar and Climate Research Center, The Ohio State University
+      institution: Byrd Polar and Climate Research Center, The Ohio State University
       year: 2016, 2017
       description:
 
@@ -81,27 +81,27 @@
       year: 2016 - 2017
       
     - title: Weather Observer
-      institution: United States Antarctic Program, West Antarctic Ice Sheet (WAIS) Divide Field Camp
+      institution: United States Antarctic Program, West Antarctic Ice Sheet (WAIS) Divide Field Camp, Antarctica
       year: 2015 - 2016
       
     - title: Gradate Research Assistant 
       institution: Polar Meteorology Group, Byrd Polar and Climate Research Center, The Ohio State University
       year: 2013 - 2015
       
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+    - title: Teaching Assistant
+      institution: The University of Oklahoma, Norman, Oklahoma
+      year: 2013
       
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+    - title: Environmental Affairs Intern
+      institution: Wakefern Food Corporation 
+      year: 2010, 2011
 
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+#- title: Open Source Projects
+#  type: time_table
+#  contents:
+#    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
+#      year: 2015-now
+#      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
 
 - title: Honors and Awards
   type: time_table
