--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -128,7 +128,7 @@
       year: 2023
       description:
         - In regard for paper 'Intense atmospheric rivers can weaken ice shelf stability at the Antarctic Peninsula'   
-    - title: Coordinator for the Antarctic Atmospheric River Workshop for Institut des Géosciences de l’Environnement  
+    - title: Coordinator for the Antarctic Atmospheric River Workshop for Institut des Géosciences de l’Environnement, Grenoble, France  
       year: 2022 
     - title: Early Career Representative for International Commission on Polar Meteorology (ICPM)
       year: 2021 - present
@@ -159,8 +159,8 @@
 #        - Description 1.
 #        - Description 2.
 
-- title: Other Interests
-  type: list
-  contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+#- title: Other Interests
+#  type: list
+#  contents:
+#    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
 
