--- a/_config.yml
+++ b/_config.yml
@@ -112,11 +112,13 @@ contact_note: >
 # Analytics and search engine verification
 # -----------------------------------------------------------------------------
 
-google_analytics:  # your Google Analytics measurement ID (format: G-XXXXXXXXXX)
+google_analytics: bNb1AvYRRlGStZI-QNcuu_5gGskuinkJr_-q5qP0yN0  # your Google Analytics measurement ID (format: G-XXXXXXXXXX)
 panelbear_analytics:  # panelbear analytics site ID (format: XXXXXXXXX)
 
 google_site_verification:  # your google-site-verification ID (Google Search Console)
 bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
+
+#<meta name="google-site-verification" content="bNb1AvYRRlGStZI-QNcuu_5gGskuinkJr_-q5qP0yN0" />
 
 # -----------------------------------------------------------------------------
 # Blog
